--- a/Project_1/Assembly-CSharp.csproj
+++ b/Project_1/Assembly-CSharp.csproj
@@ -63,8 +63,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\ApplyForce.cs" />
     <Compile Include="Assets\Cat_Class.cs" />
     <Compile Include="Assets\Dog_Class.cs" />
+    <Compile Include="Assets\GetFruit.cs" />
+    <Compile Include="Assets\IfStatements.cs" />
     <Compile Include="Assets\MouseEvents.cs" />
     <Compile Include="Assets\Movement.cs" />
     <Compile Include="Assets\Movement2.cs" />
