--- a/Project_1/Assembly-CSharp.csproj
+++ b/Project_1/Assembly-CSharp.csproj
@@ -66,14 +66,17 @@
     <Compile Include="Assets\ApplyForce.cs" />
     <Compile Include="Assets\Cat_Class.cs" />
     <Compile Include="Assets\Dog_Class.cs" />
+    <Compile Include="Assets\FloatData.cs" />
     <Compile Include="Assets\GetFruit.cs" />
     <Compile Include="Assets\IfStatements.cs" />
     <Compile Include="Assets\IntData.cs" />
+    <Compile Include="Assets\MonoEvents.cs" />
     <Compile Include="Assets\MouseEvents.cs" />
     <Compile Include="Assets\Movement.cs" />
     <Compile Include="Assets\Movement2.cs" />
     <Compile Include="Assets\Particle_Control.cs" />
     <Compile Include="Assets\Start_Script.cs" />
+    <Compile Include="Assets\UIImageController.cs" />
     <Compile Include="Assets\UITextController.cs" />
     <Reference Include="Unity.TextMeshPro.Editor">
       <HintPath>C:/Users/10839088/Documents/Git Repos/Intro-to-Scripting/Project_1/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
