--- a/Project_1/Assembly-CSharp.csproj
+++ b/Project_1/Assembly-CSharp.csproj
@@ -64,9 +64,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\ApplyForce.cs" />
-    <Compile Include="Assets\Cat_Class.cs" />
-    <Compile Include="Assets\Dog_Class.cs" />
     <Compile Include="Assets\FloatData.cs" />
+    <Compile Include="Assets\GameArtData.cs" />
     <Compile Include="Assets\GetFruit.cs" />
     <Compile Include="Assets\IfStatements.cs" />
     <Compile Include="Assets\IntData.cs" />
@@ -75,9 +74,11 @@
     <Compile Include="Assets\Movement.cs" />
     <Compile Include="Assets\Movement2.cs" />
     <Compile Include="Assets\Particle_Control.cs" />
+    <Compile Include="Assets\PlayerData.cs" />
     <Compile Include="Assets\Start_Script.cs" />
     <Compile Include="Assets\UIImageController.cs" />
     <Compile Include="Assets\UITextController.cs" />
+    <Compile Include="Assets\WeaponData.cs" />
     <Reference Include="Unity.TextMeshPro.Editor">
       <HintPath>C:/Users/10839088/Documents/Git Repos/Intro-to-Scripting/Project_1/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
