Player, clothes, and weapon data

--- a/Project_1/Assembly-CSharp.csproj
+++ b/Project_1/Assembly-CSharp.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\ApplyForce.cs" />
+    <Compile Include="Assets\ClothesData.cs" />
     <Compile Include="Assets\FloatData.cs" />
     <Compile Include="Assets\GameArtData.cs" />
     <Compile Include="Assets\GetFruit.cs" />
