--- a/Project_1/Assembly-CSharp.csproj
+++ b/Project_1/Assembly-CSharp.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Assets\ApplyForce.cs" />
     <Compile Include="Assets\ClothesData.cs" />
     <Compile Include="Assets\FloatData.cs" />
+    <Compile Include="Assets\GameArtCollection.cs" />
     <Compile Include="Assets\GameArtData.cs" />
     <Compile Include="Assets\GetFruit.cs" />
     <Compile Include="Assets\IfStatements.cs" />
@@ -73,12 +74,12 @@
     <Compile Include="Assets\MonoEvents.cs" />
     <Compile Include="Assets\MouseEvents.cs" />
     <Compile Include="Assets\Movement.cs" />
-    <Compile Include="Assets\Movement2.cs" />
-    <Compile Include="Assets\Particle_Control.cs" />
+    <Compile Include="Assets\MovementTwo.cs" />
+    <Compile Include="Assets\ParticleControl.cs" />
     <Compile Include="Assets\PlayerData.cs" />
-    <Compile Include="Assets\Start_Script.cs" />
-    <Compile Include="Assets\UIImageController.cs" />
-    <Compile Include="Assets\UITextController.cs" />
+    <Compile Include="Assets\StartScript.cs" />
+    <Compile Include="Assets\UiImageController.cs" />
+    <Compile Include="Assets\UiTextController.cs" />
     <Compile Include="Assets\WeaponData.cs" />
     <Reference Include="Unity.TextMeshPro.Editor">
       <HintPath>C:/Users/10839088/Documents/Git Repos/Intro-to-Scripting/Project_1/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
