--- a/Project_1/Assembly-CSharp.csproj
+++ b/Project_1/Assembly-CSharp.csproj
@@ -66,6 +66,9 @@
     <Compile Include="Assets\ApplyForce.cs" />
     <Compile Include="Assets\CinemachineController.cs" />
     <Compile Include="Assets\ClothesData.cs" />
+    <Compile Include="Assets\Debugger.cs" />
+    <Compile Include="Assets\DebuggerHandler.cs" />
+    <Compile Include="Assets\EnumSwitch.cs" />
     <Compile Include="Assets\FloatData.cs" />
     <Compile Include="Assets\GameArtCollection.cs" />
     <Compile Include="Assets\GameArtData.cs" />
@@ -79,7 +82,9 @@
     <Compile Include="Assets\MovementTwo.cs" />
     <Compile Include="Assets\ParticleControl.cs" />
     <Compile Include="Assets\PlayerData.cs" />
+    <Compile Include="Assets\PlayerHandler.cs" />
     <Compile Include="Assets\StartScript.cs" />
+    <Compile Include="Assets\TriggerEvents.cs" />
     <Compile Include="Assets\UiImageController.cs" />
     <Compile Include="Assets\UiTextController.cs" />
     <Compile Include="Assets\WeaponData.cs" />
@@ -302,9 +307,6 @@
     <Reference Include="UnityEngine.SpatialTracking">
       <HintPath>C:/Program Files/Unity/Hub/Editor/2018.3.5f1/Editor/Data/UnityExtensions/Unity/UnitySpatialTracking/RuntimeEditor/UnityEngine.SpatialTracking.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEngine.Advertisements">
-      <HintPath>C:/Users/10839088/Documents/Git Repos/Intro-to-Scripting/Project_1/Library/PackageCache/com.unity.ads@2.0.8/UnityEngine.Advertisements.dll</HintPath>
-    </Reference>
     <Reference Include="Unity.Analytics.Editor">
       <HintPath>C:/Users/10839088/Documents/Git Repos/Intro-to-Scripting/Project_1/Library/PackageCache/com.unity.analytics@3.2.2/Unity.Analytics.Editor.dll</HintPath>
     </Reference>
@@ -313,9 +315,6 @@
     </Reference>
     <Reference Include="Unity.Analytics.Tracker">
       <HintPath>C:/Users/10839088/Documents/Git Repos/Intro-to-Scripting/Project_1/Library/PackageCache/com.unity.analytics@3.2.2/Unity.Analytics.Tracker.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.Purchasing">
-      <HintPath>C:/Users/10839088/Documents/Git Repos/Intro-to-Scripting/Project_1/Library/PackageCache/com.unity.purchasing@2.0.3/UnityEngine.Purchasing.dll</HintPath>
     </Reference>
     <Reference Include="netstandard">
       <HintPath>C:/Program Files/Unity/Hub/Editor/2018.3.5f1/Editor/Data/NetStandard/ref/2.0.0/netstandard.dll</HintPath>
