--- a/Project_1/Assembly-CSharp.csproj
+++ b/Project_1/Assembly-CSharp.csproj
@@ -73,13 +73,16 @@
     <Compile Include="Assets\Scripts\Debugger.cs" />
     <Compile Include="Assets\Scripts\DebuggerHandler.cs" />
     <Compile Include="Assets\Scripts\EnumSwitch.cs" />
-    <Compile Include="Assets\Scripts\FireWeapon.cs" />
     <Compile Include="Assets\Scripts\Flip.cs" />
     <Compile Include="Assets\Scripts\FloatData.cs" />
+    <Compile Include="Assets\Scripts\GameAction.cs" />
+    <Compile Include="Assets\Scripts\GameActionHandler.cs" />
+    <Compile Include="Assets\Scripts\GameActionRaiser.cs" />
     <Compile Include="Assets\Scripts\GameArtCollection.cs" />
     <Compile Include="Assets\Scripts\GameArtData.cs" />
     <Compile Include="Assets\Scripts\GetFruit.cs" />
     <Compile Include="Assets\Scripts\IfStatements.cs" />
+    <Compile Include="Assets\Scripts\Instancer.cs" />
     <Compile Include="Assets\Scripts\IntData.cs" />
     <Compile Include="Assets\Scripts\Lists.cs" />
     <Compile Include="Assets\Scripts\MonoEvents.cs" />
